<resources>
    <string name="app_name">IoE</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="second_fragment">Andar favorito</string>
    <string name="previous">Escolha do andar</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="buttonFav">Favorito</string>
    <string name="msgFav">Andar favorito: </string>
    <string name="welMsg">Escolha o andar</string>
    <string name="title">Elevador inteligente</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>