<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welMsg"
        android:textSize="34sp"
        android:layout_marginVertical="250dp"
        app:layout_constraintBottom_toBottomOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/floor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="300dp"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/floor2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/floor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        app:layout_constraintStart_toEndOf="@id/floor1"
        app:layout_constraintTop_toTopOf="@id/floor1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcomeMsg" />

</androidx.constraintlayout.widget.ConstraintLayout>